Commit 13 - Responsive design (basic)

--- a/mokepon.html
+++ b/mokepon.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
+        <meta name="viewport"content="width=device-width, initial-scale=1">
         <title>🌱💧🔥 ¡ AXIEMON ! 🔥💧🌱</title>
         <link rel="stylesheet" href="./css/styles.css">
         <script src="./js/codigo.js"></script>
@@ -13,23 +14,23 @@
             <h2 class="subtitle">SELECT YOUR AXIEMON:</h2>
 
             <div class="cards">
+                <input type="radio" name="pet" id="hipoperro"/>
                 <label class="pet-card" for="hipoperro">
                     <p>HIPOCHAD</p>
                     <img src="./assets/axie-full-transparent (7).png" alt="HIPODOGE">
                 </label>
-                <input type="radio" name="pet" id="hipoperro"/>
 
+                <input type="radio" name="pet" id="capipepo"/>
                 <label class="pet-card" for="capipepo">
                     <p>KAPIKAT</p>
                     <img src="./assets/axie-full-transparent.png" alt="KAPIKAT">
                 </label>
-                <input type="radio" name="pet" id="capipepo"/>
 
+                <input type="radio" name="pet" id="ratigueya"/>
                 <label class="pet-card" for="ratigueya">
                     <p>HORNYBUG</p>
                     <img src="./assets/axie-full-transparent (3).png" alt="PLANTYRAT">
                 </label>
-                <input type="radio" name="pet" id="ratigueya"/>
             </div>
 
             <button id="button-pet-select">SELECT</button>
@@ -40,7 +41,7 @@
 
             <h2 class="subtitle">SELECT YOUR ATTACK:</h2>
 
-            <div class="cards">
+            <div class="cards-attack">
                 <button id="button-fire" class="buttons-attack">🔥 FIRE 🔥</button>
                 <button id="button-water" class="buttons-attack">💧 WATER 💧</button>
                 <button id="button-earth" class="buttons-attack">🌱 EARTH 🌱</button>
