--- a/mokepon.html
+++ b/mokepon.html
@@ -5,7 +5,6 @@
         <meta name="viewport"content="width=device-width, initial-scale=1">
         <title>🌱💧🔥 ¡ AXIEMON ! 🔥💧🌱</title>
         <link rel="stylesheet" href="./css/styles.css">
-        <script src="./js/codigo.js"></script>
     </head>
     <body>
         <section id="select-pet">
@@ -14,22 +13,22 @@
             <h2 class="subtitle">SELECT YOUR AXIEMON:</h2>
 
             <div class="cards">
-                <input type="radio" name="pet" id="hipoperro"/>
-                <label class="pet-card" for="hipoperro">
+                <input type="radio" name="pet" id="hipochad"/>
+                <label class="pet-card" for="hipochad">
                     <p>HIPOCHAD</p>
-                    <img src="./assets/axie-full-transparent (7).png" alt="HIPODOGE">
+                    <img src="./assets/axie-full-transparent (7).png" alt="HIPOCHAD">
                 </label>
 
-                <input type="radio" name="pet" id="capipepo"/>
-                <label class="pet-card" for="capipepo">
+                <input type="radio" name="pet" id="kapikat"/>
+                <label class="pet-card" for="kapikat">
                     <p>KAPIKAT</p>
                     <img src="./assets/axie-full-transparent.png" alt="KAPIKAT">
                 </label>
 
-                <input type="radio" name="pet" id="ratigueya"/>
-                <label class="pet-card" for="ratigueya">
+                <input type="radio" name="pet" id="hornybug"/>
+                <label class="pet-card" for="hornybug">
                     <p>HORNYBUG</p>
-                    <img src="./assets/axie-full-transparent (3).png" alt="PLANTYRAT">
+                    <img src="./assets/axie-full-transparent (3).png" alt="HORNYBUG">
                 </label>
             </div>
 
@@ -37,7 +36,7 @@
         </section>
 
         <section id="select-attack">
-            <h1 class="title">🌱💧🔥 ¡ MOKEPON ! 🔥💧🌱</h1>
+            <h1 class="title">🌱💧🔥 ¡ AXIEMON ! 🔥💧🌱</h1>
 
             <h2 class="subtitle">SELECT YOUR ATTACK:</h2>
 
@@ -69,5 +68,6 @@
             </div>
             
         </section>
+        <script src="./js/codigo.js"></script>
     </body>
 </html>
