Commit 16 - Attacks with Literal Objects + arrays created (NOT WORKING YET)

--- a/mokepon.html
+++ b/mokepon.html
@@ -12,24 +12,7 @@
 
             <h2 class="subtitle">SELECT YOUR AXIEMON:</h2>
 
-            <div class="cards">
-                <input type="radio" name="pet" id="hipochad"/>
-                <label class="pet-card" for="hipochad">
-                    <p>HIPOCHAD</p>
-                    <img src="./assets/axie-full-transparent (7).png" alt="HIPOCHAD">
-                </label>
-
-                <input type="radio" name="pet" id="kapikat"/>
-                <label class="pet-card" for="kapikat">
-                    <p>KAPIKAT</p>
-                    <img src="./assets/axie-full-transparent.png" alt="KAPIKAT">
-                </label>
-
-                <input type="radio" name="pet" id="hornybug"/>
-                <label class="pet-card" for="hornybug">
-                    <p>HORNYBUG</p>
-                    <img src="./assets/axie-full-transparent (3).png" alt="HORNYBUG">
-                </label>
+            <div id="cardsContainer" class="cards">
             </div>
 
             <button id="button-pet-select">SELECT</button>
