Commit 18: Code cleaning + 3 more Axiemones

--- a/mokepon.html
+++ b/mokepon.html
@@ -32,12 +32,12 @@
 
             <div class="attack-cards">
                 <div>
-                    <p id="health-player">0 🏆</p>
+                    <p id="victories-player">0 🏆</p>
                     <p id="pet-player" class="players"></p>
                     <p id="player-attack"></p>
                 </div>
                 <div>
-                    <p id="health-enemy">0 🏆</p>
+                    <p id="victories-enemy">0 🏆</p>
                     <p id="pet-enemy" class="players"></p>
                     <p id="enemy-attack"></p>
                 </div>
